Docker for haxe 3.4-yhaxen-0.0.50-node-carbon-jessie apt fix

--- a/yhaxen-node/Dockerfile
+++ b/yhaxen-node/Dockerfile
@@ -7,7 +7,7 @@ MAINTAINER polehla@gmail.com
 
 ENV YHAXEN_VERSION 0.0.50
 	
-RUN apt-get update && apk upgrade && \
+RUN apt-get update && apt-get upgrade && \
 	haxelib install yhaxen $YHAXEN_VERSION
 
 RUN apt-get install bash git openssh -y --no-install-recommends && \
