--- a/java-node/Dockerfile
+++ b/java-node/Dockerfile
@@ -12,6 +12,12 @@ RUN apk --no-cache update &&\
 	apk --no-cache upgrade &&\
 	apk --no-cache add ${JAVA_PKG}  &&\
 	rm -rf /tmp/*
+	
+ENV JAVA_HOME=/usr/lib/jvm/java-1.8-openjdk
+ENV PATH="$JAVA_HOME/bin:${PATH}"
+
+RUN java -version
+RUN javac -version
 
 # Start container
 CMD ["java","-version"] 
