--- a/mdk-cli/Dockerfile
+++ b/mdk-cli/Dockerfile
@@ -63,7 +63,8 @@ COPY bin/* /usr/local/bin/
 
 RUN chmod +rx /usr/local/bin/docker-entrypoint.sh &&\
 	chmod +rx /usr/local/bin/set-haxe &&\
-	chmod +rx /usr/local/bin/set-nodejs
+	chmod +rx /usr/local/bin/set-nodejs &&\
+	chmod +rx /usr/local/bin/set-webos
 
 ENTRYPOINT ["docker-entrypoint.sh"]
 
