--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -17,21 +17,6 @@ jobs:
     - name: Docker login
       run: echo '${{ secrets.DOCKERHUB_PASS }}' | docker login --username ${{ secrets.DOCKERHUB_USER }} --password-stdin
       
-    - name: Build tizen-cli-stretch docker image
-      run: docker build tizen -t p0l0us/haxe:tizen-cli-stretch
-    - name: Publish tizen-cli-stretch docker image
-      run: docker push p0l0us/haxe:tizen-cli-stretch
-      
-    - name: Build tizen-cli-stretch docker image
-      run: docker build tizen -t p0l0us/haxe:tizen-cli-stretch
-    - name: Publish tizen-cli-stretch docker image
-      run: docker push p0l0us/haxe:tizen-cli-stretch
-      
-    - name: Build webos-cli-buster-slim docker image
-      run: docker build webos -t p0l0us/haxe:webos-cli-buster-slim
-    - name: Publish webos-cli-buster-slim docker image
-      run: docker push p0l0us/haxe:webos-cli-buster-slim
-
     - name: Build node docker image
       run: docker build node -t p0l0us/haxe:3.4-node-carbon-alpine
     - name: Publish node docker image
@@ -47,9 +32,9 @@ jobs:
     - name: Publish ant-java-node docker image
       run: docker push p0l0us/haxe:3.4-ant-1.9.9-openjdk-12-node-carbon-alpine
 
-    - name: Build ant-java-node docker image
+    - name: Build yhaxen-ant-java-node docker image
       run: docker build yhaxen-ant-java-node -t p0l0us/haxe:3.4-yhaxen-0.0.50-ant-1.9.9-openjdk-12-node-carbon-alpine
-    - name: Publish ant-java-node docker image
+    - name: Publish yhaxen-ant-java-node docker image
       run: docker push p0l0us/haxe:3.4-yhaxen-0.0.50-ant-1.9.9-openjdk-12-node-carbon-alpine
 
     - name: Build mdk-cli image
@@ -61,3 +46,13 @@ jobs:
       run: docker build cordova -t p0l0us/haxe:3.4-cordova-mdk-cli-yhaxen-0.0.50-ant-1.9.9-openjdk-12-node-carbon-alpine
     - name: Publish cordova docker image
       run: docker push p0l0us/haxe:3.4-cordova-mdk-cli-yhaxen-0.0.50-ant-1.9.9-openjdk-12-node-carbon-alpine
+      
+    - name: Build tizen docker image
+      run: docker build tizen -t p0l0us/haxe:tizen-cli-stretch
+    - name: Publish tizen docker image
+      run: docker push p0l0us/haxe:tizen-cli-stretch
+      
+    - name: Build webos docker image
+      run: docker build webos -t p0l0us/haxe:webos-cli-buster-slim
+    - name: Publish webos docker image
+      run: docker push p0l0us/haxe:webos-cli-buster-slim
