--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -5,12 +5,12 @@ on:
     branches:
     - master
     paths:
-    - 'node/**'
+    - node/**
   pull_request:
     branches:
     - master
     paths:
-    - 'node/**'
+    - node/**
 
 jobs:
 
