enabling build-all

--- a/.github/workflows/build-all.yml
+++ b/.github/workflows/build-all.yml
@@ -2,9 +2,9 @@ name: Docker Image all
 
 on:
   push:
-    branches: [ master-disabled ]
+    branches: [ master ]
   pull_request:
-    branches: [ master-disabled ]
+    branches: [ master ]
 
 jobs:
 
