use absolute paths

--- a/tizen/Dockerfile
+++ b/tizen/Dockerfile
@@ -34,8 +34,9 @@ RUN wget -O /home/massive/tizen-cli.bin http://download.tizen.org/sdk/Installer/
 
 USER root
 
-COPY entrypoint.sh .
 
-RUN chmod +x entrypoint.sh
+COPY entrypoint.sh /entrypoint.sh
 
-ENTRYPOINT ["entrypoint.sh"]
+RUN chmod +x /entrypoint.sh
+
+ENTRYPOINT ["/entrypoint.sh"]
