--- a/cordova/Dockerfile
+++ b/cordova/Dockerfile
@@ -71,6 +71,9 @@ RUN $ANDROID_HOME/tools/bin/sdkmanager "tools" "platform-tools" && \
 
 RUN npm install -g cordova@7.1.0
 
+COPY bin/* /usr/local/bin/
+RUN chmod +rx /usr/local/bin/docker-entrypoint.sh
+
 ENTRYPOINT ["docker-entrypoint.sh"]
 
 CMD ["haxelib", "run", "yhaxen"]
