Separate clean cordova image and mdk-cli-cordova separation.

--- a/.github/workflows/cordova.yml
+++ b/.github/workflows/cordova.yml
@@ -24,6 +24,6 @@ jobs:
       run: echo '${{ secrets.DOCKERHUB_PASS }}' | docker login --username ${{ secrets.DOCKERHUB_USER }} --password-stdin
 
     - name: Build cordova docker image
-      run: docker build cordova -t p0l0us/haxe:3.4-cordova-mdk-cli-yhaxen-0.0.50-ant-1.9.9-openjdk-12-node-carbon-alpine
+      run: docker build cordova -t p0l0us/cordova:7.1.0-ant-gradle
     - name: Publish cordova docker image
-      run: docker push p0l0us/haxe:3.4-cordova-mdk-cli-yhaxen-0.0.50-ant-1.9.9-openjdk-12-node-carbon-alpine
+      run: docker push p0l0us/cordova:7.1.0-ant-gradle
